fixed logo border flicker on mouseout

--- a/development/app/assets/stylesheets/application.css
+++ b/development/app/assets/stylesheets/application.css
@@ -52,7 +52,7 @@ a
 .title:hover .icon
 {
     border-style: solid;
-    border-width: 0px 0px 3px 0px;
+    border-width: 0px 0px 0px 0px;
     border-color: #333;
     margin-bottom: -28px;
     
@@ -62,6 +62,7 @@ a
 
 .title:hover .icon:hover
 {
+    border-width: 0px 0px 3px 0px;
     background-color: #555;
     border-color: #555;
 
